Todos os cruds totalmente funcional
